[package]
name = "Blog-Creator"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.41" , features = ["serde"] }
iced = {version="0.13.1",features=["highlighter","image","markdown","auto-detect-theme","tokio"]}
iced_aw = "0.12.2"
iced_fonts = "0.2.1"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
image = "0.25.6"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
webbrowser = "1.0.5"
dark-light = "2.0.0"
